--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
 <app-jovemdev-title></app-jovemdev-title>
-<app-calculo-imc></app-calculo-imc>
+<a routerLink="/bindings" routerLinkActive="linkSelected">Bindings</a>
+<a routerLink="/imc" routerLinkActive="linkSelected">Cálculo IMC</a>
+<a routerLink="/class" routerLinkActive="linkSelected">Ng Class</a>
+<a routerLink="/style" routerLinkActive="linkSelected">Ng Style</a>
+<a routerLink="/model" routerLinkActive="linkSelected">Ng Model</a>
+<a routerLink="/if" routerLinkActive="linkSelected">Ng If</a>
+<a routerLink="/for" routerLinkActive="linkSelected">Ng For</a>
+<a routerLink="/switch" routerLinkActive="linkSelected">Ng Switch</a>
+<a routerLink="/pipes" routerLinkActive="linkSelected">Ng Pipes</a>
 <router-outlet></router-outlet>
