--- a/src/app/jovemdev-title/jovemdev-title.component.scss
+++ b/src/app/jovemdev-title/jovemdev-title.component.scss
@@ -1,7 +1,6 @@
 .cabecalho {
     padding: 2%;
     font-family: 'Courier New', Courier, monospace;
-    color: white;
-    background: rgb(28,242,225);
+    background: beige;
     
 }
