--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,7 +5,8 @@
 a:link,
 a:visited {
     display: flex;
-    background-color: beige;
+    background-color: rgb(108, 211, 236);
+    box-shadow: 2px 2px 4px rgb(0, 0, 0, 200), ;
     color: black;
     text-decoration: none;
     display: inline-block;
