--- a/src/app/ng-class/ng-class.component.html
+++ b/src/app/ng-class/ng-class.component.html
@@ -1,1 +1,5 @@
-<p>ng-class works!</p>
+<main class="main">
+    <div class="container">
+        <h1 [ngClass]="{'preto': valor, 'amarelo':!valor}">Mudando</h1>
+    </div>
+</main>
