--- a/src/app/calculo-imc/calculo-imc.component.scss
+++ b/src/app/calculo-imc/calculo-imc.component.scss
@@ -17,7 +17,8 @@
     gap: 5px;
     border-radius: 20px;
     color: white;
-    background-color: rgb(134, 126, 126);
+    background: rgb(0, 212, 255);
+    background: linear-gradient(90deg, rgba(0, 212, 255, 1) 0%, rgba(128, 8, 132, 1) 52%, rgba(2, 0, 36, 1) 100%);
     box-shadow: 2px 2px 4px rgb(0, 0, 0, 200), ;
 
 }
