--- a/src/app/jovemdev-title/jovemdev-title.component.scss
+++ b/src/app/jovemdev-title/jovemdev-title.component.scss
@@ -1,6 +1,7 @@
 .cabecalho {
     padding: 2%;
     font-family: 'Courier New', Courier, monospace;
-    background: beige;
-    
+    background: rgb(0, 212, 255);
+    background: linear-gradient(90deg, rgba(0, 212, 255, 1) 0%, rgba(128, 8, 132, 1) 52%, rgba(2, 0, 36, 1) 100%);
+
 }
